# game-of-life

./: README.md  pyproject.toml  run.py
src/gameoflife/: cell.py  constants.py  error.py  game.py  main.py
